# CompArchitecture

./: .gitignore  CMakeLists.txt  README.md
BigChars/: BigChars.c  BigChars.h  CMakeLists.txt
Lab1/: main.c
Lab2/: main.c
Lab3/: main.c
Lab4/: main.c
MyGUI/: CMakeLists.txt  MyGUI.c  MyGUI.h
MyTerm/: CMakeLists.txt  MyTerm.c  MyTerm.h
SimpleComputer/: CMakeLists.txt  SimpleComputer.c  SimpleComputer.h
